<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.github.and_project_kotlin_final.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.github.and_project_kotlin_final.ui.dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.github.and_project_kotlin_final.ui.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />

    <fragment
        android:id="@+id/navigation_inventory"
        android:name="com.github.and_project_kotlin.ui.inventory.Inventory"
        android:label="@string/title_inventory"
        tools:layout="@layout/fragment_inventory">
        <action
            android:id="@+id/action_navigation_inventory_to_inventoryItemDetailed"
            app:destination="@id/inventoryItemDetailed"
            app:enterAnim="@anim/fragment_open_enter"
            app:exitAnim="@anim/fragment_open_exit"
            app:popEnterAnim="@anim/fragment_open_enter"
            app:popExitAnim="@anim/fragment_open_exit" />
    </fragment>

    <fragment
        android:id="@+id/navigation_characters"
        android:name="com.github.and_project_kotlin_final.ui.characters.CharacterMenu"
        android:label="@string/title_characterSheet"
        tools:layout="@layout/fragment_characters"/>
    <fragment
        android:id="@+id/inventoryItemDetailed"
        android:name="com.github.and_project_kotlin_final.ui.inventory.detailed.InventoryItemDetailed"
        android:label="fragment_inventory_item_detailed"
        tools:layout="@layout/fragment_inventory_item_detailed" >
        <argument
            android:name="characterName"
            app:argType="string" />
    </fragment>
</navigation>
